# Intel-Intrinsics-CPP-Wrapper

./: CMakeLists.txt  CMakePresets.json  README.md  run.cpp
AVX512/: CMakeLists.txt
AVX512/include/: shakhbat_AVX512.h  types.h  vector_common.h  vector_float.h
AVX512/source/: vector_float.cpp
AVX512/vector/include/: AVX_Library.h
AVX512/vector/source/: AVX_Library.cpp
doc/: v16int16_t.md  v16uint16_t.md  (+8 more)
test/unit_test/AVX/: CMakeLists.txt  Test_AVX_add.cpp  Test_AVX_and.cpp  Test_AVX_ceil.cpp  Test_AVX_comp.cpp  Test_AVX_div.cpp  Test_AVX_floor.cpp  Test_AVX_max.cpp  Test_AVX_min.cpp  Test_AVX_mul.cpp  Test_AVX_or.cpp  Test_AVX_round.cpp  Test_AVX_sqrt.cpp  Test_AVX_sub.cpp  Test_AVX_xor.cpp
test/unit_test/AVX/ALU/: Test_AVX_add.cpp  Test_AVX_and.cpp  Test_AVX_comp.cpp  Test_AVX_div.cpp  Test_AVX_mul.cpp  Test_AVX_or.cpp  Test_AVX_sqrt.cpp  Test_AVX_xor.cpp
vector_lib/: CMakeLists.txt
vector_lib/AVX/: CMakeLists.txt
vector_lib/AVX/include/: shakhbat_avx.h  vector16_int16.h  vector16_uint16.h  vector256_int.h  vector32_int8.h  vector32_uint8.h  vector4_double.h  vector4_int64.h  vector4_uint64.h  vector8_float.h  vector8_int32.h  vector8_uint32.h  vector_int.h
vector_lib/AVX/include/float/: vector8_float.h
vector_lib/AVX/source/: vector16_int16.cpp  vector16_uint16.cpp  vector32_int8.cpp  vector32_uint8.cpp  vector4_double.cpp  vector4_int64.cpp  vector4_uint64.cpp  vector8_float.cpp  vector8_int32.cpp  vector8_uint32.cpp
vector_lib/AVX2/: CMakeLists.txt
vector_lib/AVX2/include/: shakhbat_avx2.h  vector8_int32.h  vector8_uint32.h
vector_lib/AVX2/source/: vector8_int32.cpp  vector8_uint32.cpp
vector_lib/common/: mask.h  scalar.h  types.h  vector_common.h
vector_lib/include/float/: vector8_float.h
(+32 files in other folders)
